k8s-inference/clusters/common/manifests/ops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ops
  labels: { serverless2.nebius/component: ops }
